--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,4 +30,4 @@ jobs:
       run: |
         git add .
         git commit -m "Batch clone data"
-        git push origin main
+        git pull --rebase origin main
